Tue Mar 01 00:08:12 GMT 2005  Olly Betts <olly@survex.com>

	* xapian.spec.in: Put the .so in the -devel package (it's only useful
	  for linking to - the .so.* files are all that's needed at runtime).

Tue Mar 01 00:05:25 GMT 2005  Olly Betts <olly@survex.com>

	* Makefile.am,xapian-config.in,xapian.spec.in,extra/.cvsignore,
	  extra/Makefile.am: Eliminated the extra library for the queryparser
	  - it's tiny compared to the main library and having it around just
	  complicates things.

Mon Feb 28 23:52:19 GMT 2005  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: More set_length() changes.

Mon Feb 28 20:31:13 GMT 2005  Olly Betts <olly@survex.com>

	* net/socketclient.cc,net/socketserver.cc,api/omenquire.cc,
	  api/omquery.cc,api/omqueryinternal.cc,common/,
	  include/xapian/enquire.h,include/xapian/query.h,matcher/:
	  Remove Query::set_length() in favour of an optional length
	  parameter to Enquire::set_query().

Mon Feb 28 15:32:32 GMT 2005  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc,common/Makefile.am,common/deleter_vector.h:
	  Removed deleter_vector as it's no longer used anywhere.

Mon Feb 28 15:27:42 GMT 2005  Olly Betts <olly@survex.com>

	* api/omquery.cc,api/omqueryinternal.cc,include/xapian/query.h,
	  matcher/localmatch.cc,tests/api_anydb.cc,tests/api_nodb.cc:
	  Eliminated Query::set_elite_set_size().

Mon Feb 28 15:15:45 GMT 2005  Olly Betts <olly@survex.com>

	* HACKING: Note how to disable use of VALGRIND on the make check
	  command line, or when using runtest directly.

Mon Feb 28 13:36:07 GMT 2005  Olly Betts <olly@survex.com>

	* common/omqueryinternal.h: Removed out-of-date commented out version
	  of Xapian::Query::Internal.

Mon Feb 28 13:07:42 GMT 2005  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_alltermslist.cc,tests/api_db.cc: Updated (C)
	  dates for changes earlier this year.

Mon Feb 28 13:04:41 GMT 2005  Olly Betts <olly@survex.com>

	* api/omquery.cc,api/omqueryinternal.cc,include/xapian/query.h,